# AgenticFlow-PPI

./: LICENSE  README.md  SETUP_CROSS_PLATFORM.md  pyproject.toml  requirements.txt
agentflow_ppi/: __init__.py  config.py
agentflow_ppi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: benchmark_aorm_bulk.py  benchmark_biological_queries.py  benchmark_codesign_dispatch.py  benchmark_core_scaling.py  benchmark_cost_model.py  benchmark_dispatch_ablation.py  benchmark_distributed_runtime.py  benchmark_endtoend_baselines.py  benchmark_engine_baselines.py  benchmark_external_reranking.py  benchmark_generality.py  benchmark_large_dispatch.py  benchmark_largescale_shrc.py  benchmark_learned_cost.py  benchmark_llm_multiagent.py  benchmark_modality_labeling.py  benchmark_multiagent.py  benchmark_optimizer_dispatch.py  benchmark_pipeline_baselines.py  benchmark_plan_flips.py  benchmark_published_index.py  benchmark_reachability.py  benchmark_reranker_gate_sensitivity.py  benchmark_robustness.py  benchmark_shrc_scaling.py  benchmark_string_scale.py  benchmark_strong_baselines.py  build_external_manifest.py  build_shrc_demo.py  check_baseline_invariants.py  check_environment.py  collect_dataset_metrics.py  download_external_data.py  generate_paper_artifacts.py  generate_revision_response_results.py  generate_shrc_component_ablation.py  generate_supplementary_results.py  prepare_acyclic_snapshot.py  replace_real_macros.py  run_all_experiments.py  (+4 more)
tests/: test_agents.py  test_benchmark_smoke.py  test_engines.py  test_external.py  test_generality.py  (+11 more)
(+65 files in other folders)
